--- a/sample-config/cgi.cfg.in
+++ b/sample-config/cgi.cfg.in
@@ -709,6 +709,18 @@ default_expiring_disabled_notifications_duration=86400
 
 
 
+# DISABLE CMD CGI CSRF PROTECTION
+# This option disables the protection against CSRF attacks
+# (Cross-Site Request Forgery). Use this option only if you are
+# using external programs (like Nagstamon) which access
+# cmd.cgi directly to submit commands. By default the submitted
+# command (via external program) will be rejected.
+# The default is 0 (protection is on).
+
+disable_cmd_cgi_csrf_protection=0
+
+
+
 
 ######################################
 #
